--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
     <div class="one-half column" style="margin-top: 5%; font-size: 1.7rem">
   			<p>
           <h2>Jaume Vives-i-Bastida</h2>
-                    <a href="https://economics.mit.edu/people/phd-students/jaume-vives-i-bastida" color=#5555>MIT Website</a><br />
   				<a href="https://github.com/jvivesb"><i class="fa fa-github fa-1x" style="color:#303030"></i></a> &nbsp;
           <a href="https://scholar.google.com/citations?user=Md6Cm7IAAAAJ&hl=en"><span class="fab icon-scholar fa-2x" style="font-size: 1.6rem"></span></a> &nbsp;
           <a href="https://www.linkedin.com/in/jaume-vives-596586bb/"><i class="fa fa-linkedin fa-1x"></i></a><br>
@@ -88,7 +87,7 @@
   
 	<div class="row" style="margin-top:5%; font-size: 1.7rem">
 		<p>
-    I'm a Ph.D. candidate in Economics and Statistics at <a href="https://economics.mit.edu/">MIT</a>. My primary research fields are econometrics and industrial organization with a particular interest in synthetic control methods and recommendation systems in two-sided platforms. During the PhD I have been a <a href="https://research.facebook.com/fellows/bastida-jaume-vives-i/">Meta Research PhD Fellow</a> and a <a href="https://becarios.fundacionlacaixa.org/en/jaume-vives-bastida-B005044">La Caixa fellow</a>. Previously, I obtained a BSc. in Econometrics and Mathematical Economics from the LSE (First Class Honours) and worked as a research professional at the University of Chicago Booth School of Business. I also have experience designing causal inference methods at Google, Quantco, and as a consultant for Ivalua (Catalan Government). Starting in September 2025, I will be a Postdoc at Stanford GSB and the Stanford Causal Science Center, and from September 2026, I will join NYU as an Assistant Professor of Economics and Data Science.
+    I am an Economics and Data Science researcher primarly working in combining ML and Econometrics for policy evaluation and platform economcis. Currently, I am a Postdoc at Stanford GSB and the Stanford Causal Science Center collaborating with Airbnb. Starting in September 2026, I will join NYU as an Assistant Professor of Economics and Data Science. In 2025, I received a PhD in Economics and Statistics from MIT. During the PhD I was a <a href="https://research.facebook.com/fellows/bastida-jaume-vives-i/">Meta Research PhD Fellow</a> and a <a href="https://becarios.fundacionlacaixa.org/en/jaume-vives-bastida-B005044">La Caixa fellow</a>. Previously, I obtained a BSc. in Econometrics and Mathematical Economics from the LSE (First Class Honours) and worked as a research professional at the University of Chicago Booth School of Business. I also have experience designing causal inference methods at Google, Quantco, and as a consultant for Ivalua (Catalan Government).
     </p>
 		</p>
 	</div>
